--- a/grid.html
+++ b/grid.html
@@ -4,9 +4,10 @@
 <link rel="stylesheet" type="text/css" href="css/grid.css">
 </head>
 <body>
-	<div id='container'>
-
-		
+	<div id="button_container">
+	<button type="button">Clear</button>		
+	</div>
+	<div id='container'>		
 	</div>
 <script src="js/jquery.js"></script>
 <script src="js/grid.js"></script>
