--- a/grid.html
+++ b/grid.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 	<div id="button_container">
-	<button type="button">Clear</button>		
+	<button id="new">How Many?</button>
+	<button id="clear">Clear</button>		
 	</div>
 	<div id='container'>		
 	</div>
